# Frame-extraction

./: .gitignore  README.md  build.bat  build.sh  pyproject.toml  requirements.txt  run_gui.py  setup.py
videoframe/: __init__.py  gui_pyqt.py
videoframe/cli/: __init__.py  main.py
videoframe/config/: __init__.py  default.yaml
videoframe/core/: __init__.py
videoframe/core/composition/: __init__.py  composer.py
videoframe/core/extraction/: __init__.py  engine.py  extractor.py
videoframe/core/index/: __init__.py  database.py  manager.py  scanner.py
videoframe/core/metadata/: __init__.py  extractor.py
videoframe/models/: __init__.py
videoframe/utils/: __init__.py
